# RetroTunes

./: .env.example  .gitignore  .nvmrc  00-SETUP-SUMMARY.md  00-START-HERE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  FILE_SUMMARY.txt  INDICE-FILE.md  LEGGI-PRIMA.txt  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README-SETUP-FATTO.md  README.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
scripts/: check-env.sh  lint.sh  setup.sh
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  commands.rs  fsUtilities.rs  main.rs  models.rs  scan.rs  storage.rs  utils.rs
src/ts/: dom.ts  main.ts  models.ts  playback.ts  state.ts  ui.ts  utils.ts
