[package]
name = "retrotunes"
version.workspace = true
edition.workspace = true
rust-version = "1.70"
authors = ["RetroTunes Team"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-open", "window-unminimize", "window-hide", "window-close", "window-unmaximize", "window-maximize", "window-minimize", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
